# Multi-agent-system

./: LICENSE  README.md  frames.gv  out-2.ogv  out-3.ogv  typescript
INF/: state_space.py
INF/Dec_12_2018/turtle_class/mobile_robot/: CMakeLists.txt  package.xml
INF/Dec_12_2018/turtle_class/mobile_robot/script/: .move_1.py.swp  .vimrc  turtle_node14.py~
INF/Dec_12_2018/turtle_class/mobile_robot/script/turtle/: turtle_class.py  turtle_library.py
INF/check_odometry/launch/: check_odo.launch
INF/gazebo_turtles/multi_turtles/: package.xml
INF/mkr2018_mrc/robot_coordination/: CMakeLists.txt
INF/trial/learning_tf/: package.xml
INF/trial/learning_tf2/: CMakeLists.txt  package.xml
INF/trial/multi_turtles/: CMakeLists.txt
INF/tuesday27NOV/report-latex-template/: b3m33ui-report-cz.tex  be3m33ui-report-en.aux  be3m33ui-report-en.tex
INF/tuesday27NOV/turtle/: package.xml
INF/turtlebot-master/launch/: bringup.launch
INF/turtlebot-master/presentation/: turtlebot.tex
INF/turtlebot-master/scripts/: example_move_1m.py  show_markers.py
INF/turtlebot-master_autonomous/: ARO_ASSIGNMENT.md
INF/turtlebot-master_autonomous/launch/: astra.launch  camera.launch
INF/turtlebot_master/: CMakeLists.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
report-latex-template/: IEEEtran.cls  IEEEtrancz.cls  be3m33ui-report-en.aux  be3m33ui-report-en.dvi  be3m33ui-report-en.tex  multiAgents.aux  multiAgents.tex  report.aux  report.tex
src/: frames.gv
src/multi_agents/: CMakeLists.txt
src/rosnet/: CMakeLists.txt
src/turtle/: CMakeLists.txt
(+512 files in other folders)
